# manipulation_msgs

./: CMakeLists.txt  README.md  package.xml
action/: CalibratePointing.action  Control.action  Follow.action  Gripper.action  Move.action  Pick.action  Place.action  Prepare.action  SimpleRelLoc.action  Trigger.action
msg/: ControlMode.msg  Map.msg  User.msg
